[tool.poetry]
name = "powerline-pyenv"
version = "0.1.3"
description = "A Powerline segment for showing pyenv version"
authors = ["Sinkerine <github@15cm.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^2.7 || ^3"
powerline-status = "^2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
